# hotel-management-system-backend

./: README.md  alembic.ini  dev.sh  docker-compose.yaml  pyproject.toml
admin/: README.md  docker-compose.yaml  pyproject.toml
admin/alembic/: env.py
admin/alembic/versions/: 0db3c2997183_added_ondelete_foreign_constraint_to_.py  3d25162bed70_got_rid_of_messenger_table_and_added_.py  4000efe2b054_increased_email_max_length.py  82e7c2a15862_create_hotel_tables.py  b9b4536ba29f_initialize_tables.py  c1e32ce0384c_changed_hotel_string_fields_to_text.py  c67ead2939f5_changed_chat_messages_table_name_to_.py  ca02e590be64_changed_guess_count_to_json_type.py  cf0f9cc53fd3_added_ondelete_foreign_key_constraints_.py  f6c3fc51214d_changed_business_id_to_account_id_in_.py  fd86f3ffa820_added_more_columns_to_hotel_house_rules_.py
admin/app/: .env.prod  app.py  config.py  exception_handlers.py
admin/app/accounts/: models.py  repository.py
admin/app/auth/: endpoints.py  exceptions.py  (+1 more)
admin/tests/: conftest.py  test_auth.py  test_business.py  test_business_user.py  test_chat.py  test_facility.py  test_hotels.py  test_rate_limiter.py  test_session.py  test_user.py
chatbot/: client.py  config.py  pyproject.toml
discord_bot/: .gitignore  pyproject.toml
discord_bot/bot/: client.py  config.py  discord_embeds.py  hotel_embeds.py  hotel_info_sender.py
discord_bot/tests/: conftest.py  test_bot.py  utils.py
scraper/: .env  .gitignore  config.py  database.py  models.py  pyproject.toml  scraper_logger.py  sync_hotel_data_to_database.py
scraper/data_cleaner/: clean_hotel_data.py
scraper/development/: clean_development_data.py  development_data_to_database.py
scraper/hotel_data/: .env.dev  .gitignore  config.py  data_analysis.py  database.py  delete_hotel_data.py  hotel_data_deleter.py  hotel_data_getter.py  hotel_data_to_database.py  models.py  sync_hotel_data_to_database.py
scraper/hotel_scraper/: config.py  hotel_data_scraper.py  specific_hotel_scraper.py
scraper/production/: clean_production_data.py  delete_production_data.py  production_data_to_database.py
scraper/tests/: conftest.py  test_data_cleaner.py  test_sync_to_database.py  utils.py
(+389 files in other folders)
