[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["bendeez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.50.2"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
