[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["bendeez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
discord-py = "^2.4.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
