[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["bendeez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.34"
pandas = "^2.2.2"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
alembic = "^1.13.2"
scikit-learn = "^1.5.2"
playwright = "^1.47.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
